--- a/app/views/Information.html
+++ b/app/views/Information.html
@@ -57,10 +57,10 @@
 	  </div>
 	  <div class="col-xs-4 col-sm-4 col-md-4">
 	  	<ul class="information">
-		  <li class="information2"><h5>
+		  <li class="information2">
 		  	<input type="checkbox" name="checkbox1" id="checkbox1" class="ios-toggle" checked/>
-			<label for="checkbox1" class="checkbox-label" data-off="off" data-on="on"></label>
-		  </h5></li>
+			<label for="checkbox1" class="checkbox-label" ></label>
+		  </li>
 		  <li class="information2"><h5><i class="fa fa-exclamation-triangle text-danger"></i></h5></li>
 		  <li class="information2"><h5><i class="fa fa-check checkIcon"></i>&nbsp;&nbsp;&nbsp;<i class="fa fa-refresh"></i></li></h5></li>
 		  <li class="information2"><h5><b>25/11/2016</b></h5></li>
