--- a/app/views/Main.html
+++ b/app/views/Main.html
@@ -21,7 +21,7 @@
           <li><h4 class="status"><b >Votre ordinateur est protégé</b></h4></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a ui-sref="Main.Parameters" href=""><i class="fa fa-cog fa-lg"></i>&nbsp;Paramètres</a></li>
+        <li ><a ui-sref="Main.Parameters" href=""><i class="fa fa-cog fa-lg" ng-class="{'buttonParameters' : buttonParameters}"></i>&nbsp;<span ng-class="{'buttonParameters' : buttonParameters}">Paramètres</span></a></li>
         <li><a href=""><i class="fa fa-bar-chart fa-lg"></i>&nbsp;Statistiques</a></li>
         <li>
           <a href="">
