--- a/app/views/customAnalyse.html
+++ b/app/views/customAnalyse.html
@@ -7,7 +7,7 @@
 	<div class="modal-body modal-body-analyse">
 		<div class="input-group">
 		  <input type="text" class="form-control form-control-modal"  ng-model="pathToScan" placeholder="Selectionnez un fichier ou un dossier">
-		  <span class="input-group-addon btn btn-default btn-file">
+		  <span class="input-group-addon .input-group-addon-customAnalyse btn btn-default btn-file">
 		  	<i class="fa fa-angle-down fa-lg"></i> <input id="pathToScan" nwdirectory type="file">
 		  </span>
 		</div>
