--- a/app/views/Parameters.html
+++ b/app/views/Parameters.html
@@ -1,75 +1,131 @@
 <div class="panel panel-primary">
   <div class="panel-body">
   	<div class="row">
-	  <div class="col-md-10 col-md-offset-1">
+	  <div class="col-md-10 col-md-offset-1 parameters" >
 	  	<uib-tabset justified="true">
 			<uib-tab>
-				<uib-tab-heading>
-			    	<i class="fa fa-tachometer"></i> Général
+				<uib-tab-heading classes="test">
+			    	GÉNÉRAL
 			  	</uib-tab-heading>
 			  	<br/>
 			  	<div class="row">
-				  <div class="col-md-10 col-md-offset-1">
-				  	<div class="panel panel-primary">
-					  <div class="panel-heading text-center">Content</div>
-					  <div class="panel-body">
-					     <uib-accordion-group is-open="status.open">
-					      <uib-accordion-heading>
-					        I can have markup, too! <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
-					      </uib-accordion-heading>
-					      This is just some content to illustrate fancy headings.
-					    </uib-accordion-group>
-					  </div>
-					</div>
+				  <div class="col-sm-12  col-md-12">
+				  	<div class="col-sm-6  col-md-6">
+				  		<h4><i>Titre</i></h4>
+						<hr>
+				  		<div class="row">
+						  <div class="col-sm-5 col-md-5">
+						  	<ul class="parameters">
+							  <li class="information2">
+							  	<input type="checkbox" name="checkbox2" id="checkbox2" class="ios-toggle" checked/>
+								<label for="checkbox2" class="checkbox-label-parameters" ></label>
+							  </li>
+							  <li class="information2">
+							  	<input type="checkbox" name="checkbox3" id="checkbox3" class="ios-toggle" checked/>
+								<label for="checkbox3" class="checkbox-label-parameters" ></label>
+							  </li>
+							  <li class="information2">
+							  	<input type="checkbox" name="checkbox4" id="checkbox4" class="ios-toggle" checked/>
+								<label for="checkbox4" class="checkbox-label-parameters" ></label>
+							  </li>
+							  <li class="information2">
+							  	<input type="checkbox" name="checkbox5" id="checkbox5" class="ios-toggle" checked/>
+								<label for="checkbox5" class="checkbox-label-parameters" ></label>
+							  </li>
+							  <li class="information2">
+							  	<input type="checkbox" name="checkbox6" id="checkbox6" class="ios-toggle" checked/>
+								<label for="checkbox6" class="checkbox-label-parameters" ></label>
+							  </li>
+							</ul>
+						  </div>
+						  <div class="col-sm-7 col-md-7">
+						  	<ul class="parameters">
+							  <li class="parameters"><h5>Option choix</h5></li>
+							  <li class="parameters"><h5>Option choix</h5></li>
+							  <li class="parameters"><h5>Option choix</h5></li>
+							  <li class="parameters"><h5>Option choix</h5></li>
+							  <li class="parameters"><h5>Option choix</h5></li>
+							</ul>
+						  </div>
+						</div>
+				  	</div>
+				  	<div class="col-sm-6  col-md-6">
+				  		<h4><i>Autre Titre</i></h4>
+						<hr>
+				  		<ul class="parameters">
+						  <li class="parametersColumnTwo">
+						  	<form class="form-inline" role="form">
+							  <div class="form-group">
+							  	<label class="col-xs-8" for="pwd"><h5>Fréquence mise à jours</h5></label>
+							    <input class="col-xs-4" type="number" ng-model="myText" name="inputName">
+							  </div>
+							</form>
+						  </li>
+						  <li class="parametersColumnTwo">
+						  	<h5>
+						  		<div class="radio">
+							  		<label><input type="radio" name="optradio">Option 1</label>
+								</div>
+							</h5>
+						  </li>
+						  <li class="parametersColumnTwo">
+						  	<h5>
+						  		<div class="radio">
+							  		<label><input type="radio" name="optradio">Option 1</label>
+								</div>
+							</h5>
+						  </li>
+						  <li class="parametersColumnTwo">
+						  	Répertoire de quarantaine
+						  </li>
+						  <li class="parametersColumnTwo">
+						  	<h5>
+						  		<div class="input-group">
+								  <input type="text" class="form-control form-control-parameters"  ng-model="pathToScan" placeholder="Selectionnez un fichier ou un dossier">
+								  <span class="input-group-addon input-group-addon-parameters btn btn-default btn-file">
+								  	<i class="fa fa-angle-down fa-lg"></i> <input id="pathToScan" nwdirectory type="file">
+								  </span>
+								</div>
+							</h5>
+						  </li>
+						</ul>
+				  	</div>
 				  </div>
+				</div>
+				<div class="row">
+				  	<div class="col-sm-12  col-md-12">
+					  	<span class="pull-right">
+							<button type="button" class="btn cancelButton" ng-click="ok()">ANNULER</button>&nbsp;&nbsp;
+							<button type="button" class="btn submitButton" ng-click="ok()">VALIDER</button>
+						</span>
+					</div>
 				</div>
 			</uib-tab>
 			<uib-tab >
 				<uib-tab-heading>
-			    	<i class="fa fa-history"></i> Temps réel 
+			    	TEMPS RÉEL
 			  	</uib-tab-heading>
 			  	<br/>
 			  	<div class="row">
-				  <div class="col-md-10 col-md-offset-1">
-				  	<div class="panel panel-primary">
-					  <div class="panel-heading text-center">Content</div>
-					  <div class="panel-body">
-					    Panel content
-					  </div>
-					</div>
-				  </div>
+
 				</div>
 			</uib-tab>
 			<uib-tab >
 				<uib-tab-heading>
-			    	<i class="fa fa-cubes"></i> Modules
+			    	MODULES
 			  	</uib-tab-heading>
 			  	<br/>
 			  	<div class="row">
-				  <div class="col-md-10 col-md-offset-1">
-				  	<div class="panel panel-primary">
-					  <div class="panel-heading text-center">Content</div>
-					  <div class="panel-body">
-					    Panel content
-					  </div>
-					</div>
-				  </div>
+
 				</div>
 			</uib-tab>
 			<uib-tab >
 				<uib-tab-heading>
-			    	<i class="fa fa-refresh"></i> Updates
+			    	UPDATES
 			  	</uib-tab-heading>
 			  	<br/>
 			  	<div class="row">
-				  <div class="col-md-10 col-md-offset-1">
-				  	<div class="panel panel-primary">
-					  <div class="panel-heading text-center">Content</div>
-					  <div class="panel-body">
-					    Panel content
-					  </div>
-					</div>
-				  </div>
+
 				</div>
 			</uib-tab>
 		</uib-tabset>
