--- a/app/views/Journal.html
+++ b/app/views/Journal.html
@@ -418,87 +418,17 @@
 						      </tr>
 						    </thead>
 						    <tbody class="quarantine" id="ex3">
-						      <tr class="quarantine">
-						        <td style="width:30%"class="quarantine"><h7>malware</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>C:/Users/Bla/bla/bla</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>04/12/2015</h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="fa fa-refresh"></i></h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="text-danger fa fa-times"></i></h7></td>
-						      </tr>
-						      <tr class="quarantine">
-						        <td style="width:30%"class="quarantine"><h7>malware</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>C:/Users/Bla/bla/bla</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>04/12/2015</h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="fa fa-refresh"></i></h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="text-danger fa fa-times"></i></h7></td>
-						      </tr>
-						      <tr class="quarantine">
-						        <td style="width:30%"class="quarantine"><h7>malware</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>C:/Users/Bla/bla/bla</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>04/12/2015</h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="fa fa-refresh"></i></h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="text-danger fa fa-times"></i></h7></td>
-						      </tr>
-						      <tr class="quarantine">
-						        <td style="width:30%"class="quarantine"><h7>malware</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>C:/Users/Bla/bla/bla</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>04/12/2015</h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="fa fa-refresh"></i></h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="text-danger fa fa-times"></i></h7></td>
-						      </tr>
-						      <tr class="quarantine">
-						        <td style="width:30%"class="quarantine"><h7>malware</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>C:/Users/Bla/bla/bla</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>04/12/2015</h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="fa fa-refresh"></i></h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="text-danger fa fa-times"></i></h7></td>
-						      </tr>
-						      <tr class="quarantine">
-						        <td style="width:30%"class="quarantine"><h7>malware</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>C:/Users/Bla/bla/bla</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>04/12/2015</h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="fa fa-refresh"></i></h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="text-danger fa fa-times"></i></h7></td>
-						      </tr>
-						      <tr class="quarantine">
-						        <td style="width:30%"class="quarantine"><h7>malware</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>C:/Users/Bla/bla/bla</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>04/12/2015</h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="fa fa-refresh"></i></h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="text-danger fa fa-times"></i></h7></td>
-						      </tr>
-						      <tr class="quarantine">
-						        <td style="width:30%"class="quarantine"><h7>malware</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>C:/Users/Bla/bla/bla</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>04/12/2015</h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="fa fa-refresh"></i></h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="text-danger fa fa-times"></i></h7></td>
-						      </tr>
-						      <tr class="quarantine">
-						        <td style="width:30%"class="quarantine"><h7>malware</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>C:/Users/Bla/bla/bla</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>04/12/2015</h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="fa fa-refresh"></i></h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="text-danger fa fa-times"></i></h7></td>
-						      </tr>
-						      <tr class="quarantine">
-						        <td style="width:30%"class="quarantine"><h7>malware</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>C:/Users/Bla/bla/bla</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>04/12/2015</h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="fa fa-refresh"></i></h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="text-danger fa fa-times"></i></h7></td>
-						      </tr>
-						      <tr class="quarantine">
-						        <td style="width:30%"class="quarantine"><h7>malware</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>C:/Users/Bla/bla/bla</h7></td>
-						        <td style="width:30%"class="quarantine"><h7>04/12/2015</h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="fa fa-refresh"></i></h7></td>
-						        <td style="width:5%"class="quarantine"><h7><i class="text-danger fa fa-times"></i></h7></td>
+						      <tr class="quarantine" ng-repeat="obj in quarantineObjects">
+						        <td style="width:30%"class="quarantine"><h7>{{obj.name}}</h7></td>
+						        <td style="width:30%"class="quarantine"><h7>{{obj.path}}</h7></td>
+						        <td style="width:30%"class="quarantine"><h7>{{obj.path}}</h7></td>
+						        <td style="width:5%"class="quarantine"><h7 ng-click="refreshQuatantineObject($index)" ng-bind-html="obj.refresh"></h7></td>
+						        <td style="width:5%"class="quarantine"><h7 ng-click="deleteQuatantineObject($index)" ng-bind-html="obj.delete"></h7></td>
 						      </tr>
 						    </tbody>
 						</table>
 						<span class="pull-right">
-							<button type="button" class="btn clearButton" ng-click="ok()">NETTOYER</button>
+							<button type="button" class="btn clearButton" ng-click="clearQuarantine()">NETTOYER</button>
 						</span>
 					</div>
 				</div>	
