--- a/app/views/Scan.html
+++ b/app/views/Scan.html
@@ -148,8 +148,8 @@
 				    </div>
 	            </div>
 	            <div class="col-xs-3 col-sm-3 col-md-3">
-	            	<!--<button type="button" class="btn stopButton">STOP</button>-->
-	            	<button type="button" class="btn startButton">START</button>
+	            	<!--<button  type="button" class="btn stopButton">STOP</button>-->
+	            	<button type="button" ng-click="startMe()" class="btn startButton">START</button>
 	            </div>
 	        </div>
 	    </form>
