ng-armadito :: new interface + av status + scan progress bar. + modif on scanController.js

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -243,7 +243,7 @@
     }
     
     .status{
-      font-family: Symbol;
+      font-family: Arial;
       letter-spacing: 1px;
     }
     .interrogation {
