--- a/app/views/Information.html
+++ b/app/views/Information.html
@@ -58,12 +58,13 @@
 	  <div class="col-xs-4 col-sm-4 col-md-4">
 	  	<ul class="information">
 		  <li class="information2">
-		  	<input type="checkbox" name="checkbox1" id="checkbox1" class="ios-toggle" checked/>
-			<label for="checkbox1" class="checkbox-label" ></label>
+		  	<input type="checkbox" ng-model="state.realtime" ng-change="testfunc()" name="checkbox1" id="checkbox1" class="ios-toggle" checked/>
+			<label for="checkbox1" class="checkbox-label"></label>
 		  </li>
-		  <li class="information2"><h5><i class="fa fa-exclamation-triangle text-danger"></i></h5></li>
+		  <li class="information2"><h5><i ng-class="state.service ? 'fa fa-check checkIcon' : 'fa fa-exclamation-triangle text-danger'"></i></h5></li>
+		  
 		  <li class="information2"><h5><i class="fa fa-check checkIcon"></i>&nbsp;&nbsp;&nbsp;<i class="fa fa-refresh"></i></li></h5></li>
-		  <li class="information2"><h5><b>25/11/2016</b></h5></li>
+		  <li class="information2"><h5><b>{{state.last_update}}</b></h5></li>
 		</ul>
 	  </div>
 	</div>
@@ -74,44 +75,19 @@
 			      <tr class="information">
 			        <th clas="information" style="width:40%"><h4><i class="informationTitle">Modules</i></h4></th>
 			        <th class="information" style="width:60%"><h4><i class="informationTitle">Date</i></h4></th>
+			        <th class="information" style="width:60%"><h4><i class="informationTitle">Status</i></h4></th>
 			      </tr>
 			    </thead>
-			    <tbody class="information" id="ex3">
+			    <tbody class="information" id="ex3" ng-repeat="module in state.modules">
 			      <tr class="information">
-			        <td style="width:40%" class="information"><h7>NomDuModule</h7></td>
-			        <td style="width:60%"class="information"><h7>04/15/2016</h7></td>
+			        <td style="width:40%" class="information"><h7>{{module.name}}</h7></td>
+			        <td style="width:60%"class="information"><h7>{{module.update['last-update']}}</h7></td>
+			        <td style="width:60%"class="information"><h7>{{module.update.status}}</h7></td>
 			      </tr>
 				  <tr class="information">
-			        <td style="width:40%" class="information"><h7>NomDuModule</h7></td>
+			        <td style="width:40%" class="information"><h7>ModuleNOP</h7></td>
 			        <td style="width:60%"class="information"><h7>04/15/2017</h7></td>
-			      </tr>
-			      <tr class="information">
-			        <td style="width:40%" class="information"><h7>NomDuModule</h7></td>
-			        <td style="width:60%"class="information"><h7>04/15/2018</h7></td>
-			      </tr>
-			      <tr class="information">
-			        <td style="width:40%" class="information"><h7>NomDuModule</h7></td>
-			        <td style="width:60%"class="information"><h7>04/15/2016</h7></td>
-			      </tr>
-				  <tr class="information">
-			        <td style="width:40%" class="information"><h7>NomDuModule</h7></td>
-			        <td style="width:60%"class="information"><h7>04/15/2017</h7></td>
-			      </tr>
-			      <tr class="information">
-			        <td style="width:40%" class="information"><h7>NomDuModule</h7></td>
-			        <td style="width:60%"class="information"><h7>04/15/2018</h7></td>
-			      </tr>
-			      <tr class="information">
-			        <td style="width:40%" class="information"><h7>NomDuModule</h7></td>
-			        <td style="width:60%"class="information"><h7>04/15/2016</h7></td>
-			      </tr>
-				  <tr class="information">
-			        <td style="width:40%" class="information"><h7>NomDuModule</h7></td>
-			        <td style="width:60%"class="information"><h7>04/15/2017</h7></td>
-			      </tr>
-			      <tr class="information">
-			        <td style="width:40%" class="information"><h7>NomDuModule</h7></td>
-			        <td style="width:60%"class="information"><h7>04/15/2018</h7></td>
+			        <td style="width:60%"class="information"><h7>On date</h7></td>
 			      </tr>
 			    </tbody>
 			</table>
